--- a/source/photo.html
+++ b/source/photo.html
@@ -48,7 +48,7 @@
           <div class="photo__panorame-image"></div>
           <div class="photo__panorame-item">
             <!--<img class="photo__image&#45;&#45;panorame" src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="panorame">-->
-            <div class="photo__panorame-text-block">
+            <div class="photo__text-block photo__text-block--panorame">
               <cite class="photo__author-name">Анна</cite>
               <span class="photo__time">(5 минут назад)</span>
               <p class="photo__text">Прыгать или нет? Напишите ответ в своем комментарии и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
