--- a/source/index.html
+++ b/source/index.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__header-control">
+      <div class="page-header__header-control page-header__header-control--closed">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="#" width="75" height="22" alt="Pink">
+          <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="24" alt="Pink">
         </a>
-        <button class="page-header__toggle" type="button">Открыть меню</button>
+        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
@@ -229,5 +229,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
